--- a/src/style.css
+++ b/src/style.css
@@ -6,9 +6,15 @@
 
 @layer base{
     body{
-      @apply font-poppins
+      @apply font-poppins;
     }
     h1,h2,h3,h4,h5{
-        @apply font-roboto 
+        @apply font-roboto;
     }
 }
+
+ @layer components{
+   .size-selector input:checked + label{
+    @apply bg-primary text-white;
+   }
+} 
